--- a/src/main/resources/views/login.html
+++ b/src/main/resources/views/login.html
@@ -20,7 +20,6 @@
             font-size: 13px;
             border: solid 1px #cc3300;
             padding: 2px;
-            display: none;
             margin-bottom: 5px;
             background-color: #ffe0a3;
         }
@@ -44,7 +43,7 @@
                     <div class="col-md-2">
                     </div>
                     <div class="col-md-8">
-                        <div id="divError" class="clsError"></div>
+                        <div class="clsError" th:if="${param.error}">用户名或密码错误</div>
                     </div>
                 </div>
                 <div class="row" style="height: 80px;">
